test/zinc_source/compile_errors/annotations/10_typed_multi_reassign_wrong_type.zn
// expected-error: variable 'x' expects a compatible 'f32' value

fn main() {
    x, y, z: f32 = 1
    x = "cat"
}
